--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,16 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#F44336</color> <!-- Red -->
+    <color name="green">#4CAF50</color> <!-- Green -->
+    <color name="blue">#2196F3</color> <!-- Blue -->
+    <color name="yellow">#FFEB3B</color> <!-- Yellow -->
+    <color name="orange">#FF9800</color> <!-- Orange -->
+    <color name="purple">#9C27B0</color> <!-- Purple -->
+    <color name="pink">#E91E63</color> <!-- Pink -->
+    <color name="indigo">#3F51B5</color> <!-- Indigo -->
+    <color name="brown">#795548</color> <!-- Brown -->
+    <color name="cyan">#00BCD4</color> <!-- Cyan -->
+    <color name="teal">#009688</color> <!-- Teal -->
+    <color name="lime">#CDDC39</color> <!-- Lime -->
 </resources>
